2011-07-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-draft.el (gnus-draft-clear-marks): Revert last change;
	mark actually existing articles as unread rather than the ones that
	active asserts.

2011-07-01  Paul Eggert  <eggert@cs.ucla.edu>

	* nntp.el (nntp-record-command):
	* gnus-util.el (gnus-message-with-timestamp-1):
	Use format-time-string rather than decoding time stamps by hand.
	This is simpler and insulates the code from potential changes to
	current-time format.

2011-07-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-draft.el (gnus-draft-clear-marks): Mark deleted articles as read.

2011-07-01  Daiki Ueno  <ueno@unixuser.org>

	* plstore.el (plstore-select-keys, plstore-encrypt-to): New variable.
	(plstore-save): Support public key encryption.
	(plstore--init-from-buffer): New function.
	(plstore-open): Use it; fix error when opening a non-existent file.
	(plstore-revert): Use plstore--init-from-buffer.

2011-07-01  Daiki Ueno  <ueno@unixuser.org>

	* auth-source.el (auth-source-backend): Fix :initarg for data slot.

2011-06-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mml2015.el (mml2015-use): Replace string-match-p with string-match
	for old Emacsen.

2011-06-30  Daiki Ueno  <ueno@unixuser.org>

	* mml2015.el (mml2015-use): Don't try to load PGG on Emacs 24, when EPG
	is not fully working.

2011-06-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* dgnushack.el: Autoload sha1 on XEmacs.

	* gnus-group.el (gnus-read-ephemeral-emacs-bug-group): Take an optional
	quit window configuration.

	* auth-source.el (epg-context-set-passphrase-callback): Remove
	duplicate autoload.

2011-06-30  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-request-article): Allow requesting articles by
	Message-ID with nnimap.

	* gnus-sum.el (gnus-refer-article-methods): Allow (nnir) entry to use
	current server.

2011-06-30  Teodor Zlatanov  <tzz@lifelogs.com>

	* auth-source.el: Autoload EPA/EPG functions.